--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,14 @@
     </parent>
 
     <artifactId>syslog-java-client</artifactId>
-    <packaging>jar</packaging>
-    <version>1.1.4-SNAPSHOT</version>
+    <packaging>bundle</packaging>
+    <version>1.1.3_1-SNAPSHOT</version>
 
     <name>syslog-java-client</name>
     <description>Syslog Java Client</description>
     <url>https://github.com/CloudBees-community/syslog-java-client</url>
     <inceptionYear>2014</inceptionYear>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -53,8 +54,9 @@
         <connection>scm:git:git://github.com/CloudBees-community/syslog-java-client.git</connection>
         <developerConnection>scm:git:git@github.com:CloudBees-community/syslog-java-client.git</developerConnection>
         <url>https://github.com/CloudBees-community/syslog-java-client</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -75,6 +77,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -84,6 +87,20 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Import-Package>*</Import-Package>
+                        <Export-Package>com.cloudbees.syslog*</Export-Package>
+                        <Private-Package />
+                    </instructions>
                 </configuration>
             </plugin>
         </plugins>
